--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebGIS of the Historical Maps for Taipei City</title>
+    <link rel="stylesheet" href="./style/styles.css">
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <div id="divHeader"></div>
+    
 </body>
 </html>
