added buttons in header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="./style/styles.css">
 </head>
 <body>
-    <div id="divHeader"></div>
+    <div id="divHeader">
+        <div id="divCount">Currently Visited: 1, Totally Visited: 7,779,127</div>
+        <div id="divButton">
+            <div id="btnChinese" class="btn" title="Chinese">Chinese</div>
+            <div id="btnTop" class="btnNow">Home</div>
+        </div>
+    </div>
     
 </body>
 </html>
