--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
     <link rel="stylesheet" href="./style/styles.css">
 </head>
 <body>
-    <div id="divHeader">
-        <div id="divCount">Currently Visited: 1, Totally Visited: 7,779,127</div>
-        <div id="divButton">
-            <div id="btnChinese" class="btn" title="Chinese">Chinese</div>
-            <div id="btnTop" class="btnNow">Home</div>
+    <div id="divPage">
+        <div id="divHeader">
+            <div id="divCount">Currently Visited: 1, Totally Visited: 7,779,127</div>
+            <div id="divButton">
+                <div id="btnChinese" class="btn" title="Chinese">Chinese</div>
+                <div id="btnTop" class="btnNow">Home</div>
+            </div>
         </div>
+        <div id="divLeft" region="left" splitter="true" 
+        class="dijitContentPane dijitBorderContainerNoGutter-child dijitBorderContainerNoGutter-dijitContentPane dijitBorderContainerNoGutterPane dijitAlignLeft ui-tabs ui-widget ui-widget-content ui-corner-all"
+        style="left: 0px;top: 70px;position: absolute;height: 642px;"></div>
+        <p>Hello</p>
     </div>
     
 </body>
